--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "developing an api for ebook ",
   "main": "index.js",
   "scripts": {
+ 
     "dev": "nodemon server.ts"
   },
   "keywords": [
@@ -17,5 +18,11 @@
     "nodemon": "^3.1.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
+  },
+  "dependencies": {
+    "@types/express": "^4.17.21",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "mongoose": "^8.4.1"
   }
 }
